# simplicity-wasm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PYTHON_README.md  README.md  STREAMLIT_README.md  Trunk.toml  docker-compose.yml  index.html
contract/: simple.simf
python/: Dockerfile  docker-compose.yml  python_README.md  python_app.py  requirements.txt
src/: lib.rs  simplicity_lib.rs  wasm_api.rs
streamlit/: Dockerfile  README.md  app.py  requirements.txt
